--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
-    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Форма логина</title>
+</head>
 <body>
 Hello world!
+
+<h1>Форма логина 1</h1>
+<form>
+    <input type="text" placeholder="Введите ваш логин">
+    <input type="password" placeholder="Введите ваш пароль">
+    <input type="submit" value="Войти">
+</form>
+
+<h1>Форма логина 2</h1>
+<form>
+    <input type="text" placeholder="Введите ваш логин" value="vika">
+    <input type="password" placeholder="Введите ваш пароль" value="1234">
+    <div>
+        <input type="checkbox">
+        <label>Оставаться залогиненным</label>
+    </div>
+    <input type="submit" value="Войти">
+</form>
 </body>
-<html>
+</html>
